# aocgen

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: release.yml
configs/: js_config.json  python_config.json  rust_config.json
src/: client.rs  dayn.rs.tmpl  fetch.rs  files.rs  main.rs  submit.rs  time.rs
templates/: js.tmpl  python.tmpl  readme.tmpl  rust.tmpl  rust_bench.tmpl
