[package]
name = "aocgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tinytemplate = "1"
serde = { version = "1", features = ["derive"] }
reqwest = {version = "0.11.13", features = ["blocking"] }
scraper = "0.13.0"
