[package]
name = "aocgen"
version = "1.0.3"
edition = "2021"
repository = "https://github.com/nindalf/aocgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tinytemplate = "1"
serde = { version = "1", features = ["derive"] }
reqwest = {version = "0.12.0", features = ["blocking"] }
serde_json = "1.0.89"
html2md = "0.2.13"
regex = "1.7.0"
jiff = "0.1.15"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
